--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://ceciliajalv.github.io/proyecto-react/",
+  "homepage": "https://ceciliajalv.github.io/proyecto-react",
   "name": "proyecto-de-ceci",
   "version": "0.1.0",
   "private": true,
